# python-project-50

./: .coverage  .gitignore  IMG_5483.MOV  IMG_5484.MOV  IMG_5485.MOV  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-ci.yml
diff_gen/: comparator.py  gendiff.py
diff_gen/formatter/: json.py  plain.py  stylish.py
diff_gen/scripts/: gendiff.py
gendiff/: comparator.py  gendiff.py  ya_plakayu.py
gendiff/formatter/: common.py  plain.py  stylish.py
gendiff/scripts/: fail_blya.py  gendiff.py
tests/: test_gendiff.py
