[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "show difference between two configuration files"
authors = ["Evgenii <evgen.ak24@gmail.com>"]
readme = "README.md"
packages = [{include = "diff_gen"}]

[tool.poetry.dependencies]
python = ">=3.12"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "diff_gen.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
